--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -39,4 +39,9 @@
 \newcommand{\sis}{\mathsf{SIS}}
 \newcommand{\tern}{\mathcal{T}}
 
+\newcommand{\qkots}{q_\hots}
+\newcommand{\qhvc}{q_\hvc}
+\newcommand{\betaopen}{\beta_\mathsf{op}}
+
+
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
